--- a/estilos.css
+++ b/estilos.css
@@ -90,25 +90,24 @@
     height: 200px !important;
 }
 
-.subtitulo-card{
-    font-family: hello;
-    font-size: 4rem;
-    color: white !important;
+.sub-text{
+    font-family: dream;
+    font-size: 1.5rem;
+    color: red !important;
     font-weight: bold
 }
 
-.titulo-padres {
-    color: white !important;
-    font-family: dream !important;
-    font-size: 1.8rem !important;
-    margin-top: 25px !important;
+.tit-card {
+    color: rgb(182, 55, 207) !important;
+    font-family: honeymoon !important;
+    font-size: 2.5rem !important;
     font-weight: bold !important;
 }
 
-.padres{
-    color: white !important;
+.contadores{
+    color: black !important;
     font-family: dream !important;
-    font-size: 1.3rem !important;
+    font-size: 1.7rem !important;
    
 }
 
