--- a/estilos.css
+++ b/estilos.css
@@ -97,114 +97,10 @@
     font-weight: bold
 }
 
-.tit-card {
-    color: rgb(182, 55, 207) !important;
-    font-family: honeymoon !important;
-    font-size: 2.5rem !important;
-    font-weight: bold !important;
-}
-
 .contadores{
     color: black !important;
     font-family: dream !important;
     font-size: 1.7rem !important;
-   
-}
-
-#cuenta {
-    justify-content: center;
-    margin-bottom: 50px;
-}
-
-.simply-countdown {
-    overflow: hidden;
-    display: table;
-    font-family: 'Arial', sans-serif;
-}
-
-.simply-section{
-    border: 5px solid goldenrod !important;
-    background-color: #A34678 !important;
-    border-radius: 20px !important;
-    font-family: honeymoon !important;
-    color: white;
-    font-size: 2rem;
-}
-
-.simply-countdown > .simply-section {
-    width: 150px;
-    height: 150px;
-    display: -webkit-box;
-    display: -moz-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-    -moz-box-pack: center;
-    -ms-flex-pack: center;
-    -webkit-justify-content: center;
-    justify-content: center;
-    -webkit-box-align: center;
-    -moz-box-align: center;
-    -webkit-align-items: center;
-    -ms-flex-align: center;
-    align-items: center;
-    float: left;
-    margin: 15px;
-    background: #fff;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-}
-
-.simply-countdown > .simply-section .simply-amount,
-.simply-countdown > .simply-section .simply-word {
-    display: block;
-    text-align: center;
-}
-
-.grid{        
-	column-count: 4;
-	/*column-gap: 16px;*/
-    max-width: 1200px;
-}
-
-/*.grid-item {
-    /*width: 250px;
-    margin-bottom: 5px;
-    background-color: #fff;
-    border-radius: 10px;
-	box-shadow: 0px 0px 4px 1px #000;
-}*/
-
-/* clearfix */
-.grid:after {
-    content: '';
-    display: block;
-    clear: both;
-}
-
-/* ---- grid-item ---- */
-
-.grid-sizer,
-.grid-item {
-    width: 50%;
-}
-
-.grid-item {
-    width: auto;
-    /*float: left;
-    /*background-color: #fff;*/
-    /*border-radius: 10px;*/
-	box-shadow: 1px 0px 4px 5px goldenrod;
-    border: 2px solid #333;
-    border-color: hsla(0, 0%, 0%, 0.5);
-}
-
-.gutter-sizer {
-  width: 4%;
-}
-
-.img-border {
-    border-radius: 7px;
 }
 
 @keyframes reveal {
@@ -217,30 +113,32 @@
 }
 
 @media(min-width: 200px){
-    .grid{
-        column-count: 2;
-        max-width: 1200px;
-    }
-    .wd-50 {
-        width: 100% !important;
-        border-radius: 50% !important;
-    }
-    .wd-70{
-        width: 75% !important;
+    .lista-tareas{
+        border: 5px solid black !important;
+        border-radius: 20px !important;
+        margin-right: 15px;
+        width: 300px !important;
+        height: 220px !important;
     }
 } 
 
 @media(min-width: 500px){
-    .grid{
-        column-count: 3;
-        max-width: 1200px;
+    .lista-tareas{
+        border: 5px solid black !important;
+        border-radius: 20px !important;
+        margin-right: 15px;
+        width: 300px !important;
+        height: 220px !important;
     }
 }
 
 @media(min-width: 750px){
-    .grid{
-        column-count: 3;
-        max-width: 1200px;
+    .lista-tareas{
+        border: 5px solid black !important;
+        border-radius: 20px !important;
+        margin-right: 15px;
+        width: 300px !important;
+        height: 220px !important;
     }
 } 
 
